--- a/images/solo.css
+++ b/images/solo.css
@@ -29,7 +29,7 @@
 	left: 0px;
 	right: 0px;
 	clear: both;
-	vertical-align: bottom;
+	vertical-align: middle;
 	
 	/* Bottom hair line */
 	border-bottom: solid;
